Lägger till år och månader till erfarenheten. Tanken är att man kan fylla i 2 år och 10 månader om man skulle vilja det. Matas inga månader in kommer det inte stå 0 månader, därav if-satsen.
Stilar om startsidan, menyn och erfarenheterna.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 <body>
     <main>
-        <h1> Erfarenhetslista </h1>
+        <h1> ERFARENHETER </h1>
         <section id="experienceList"></section>
     </main>
     
