Skapar formulär och funktion för att lägga till en erfarenhet i listan på startsidan.

--- a/add.html
+++ b/add.html
@@ -16,7 +16,30 @@
         </nav>
     </header>
 <body>
-    
+    <main>
+    <h1>Lägg till erfarenhet</h1>
+
+    <p id="confirm"></p>
+    <form id="expForm">
+        <label for="companyname">Företagsnamn:</label>
+        <input type="text" id="companyname" name="companyname">
+
+        <label for="task">Uppgift:</label>
+        <input type="text" id="task" name="task">
+
+        <label for="city">Stad:</label>
+        <input type="text" id="city" name="city">
+
+        <label for="howlongY"> Antal år:</label>
+        <input type="number" id="howlongY" name="howlongY">
+
+        <label for="howlongM"> Antal mån(utöver år):</label>
+        <input type="number" id="howlongM" name="howlongM" value="0">
+
+        <button type="submit"> LÄGG TILL ERFARENHET </button>
+    </form>  
+    </main>
+
     <script src="main.js"></script>
 </body>
 </html>
