--- a/add.html
+++ b/add.html
@@ -31,7 +31,7 @@
         <input type="text" id="city" name="city">
 
         <label for="howlongY"> Antal år:</label>
-        <input type="number" id="howlongY" name="howlongY">
+        <input type="number" id="howlongY" name="howlongY" value="0">
 
         <label for="howlongM"> Antal mån(utöver år):</label>
         <input type="number" id="howlongM" name="howlongM" value="0">
